reference-crs/required/vault/vaultNS.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-45"
  name: vault-secrets-operator
  labels:
    openshift.io/cluster-monitoring: "true"
