reference-crs/required/vault/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault-ui
  namespace: vault-secrets-operator
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: 8200
